2023-09-24T01:19:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6287155283 # 802
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
* notice: last 14d: unq all: 1 12
* notice: prev accum: outdated-unq outdated-all / unq all: 241 506 / 248 520
* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 248 520
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-09] / []

2023-09-23T16:20:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6284764403 # 801
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: last 14d: unq all: 1 13
* notice: prev accum: outdated-unq outdated-all / unq all: 241 506 / 248 519
* notice: next accum: outdated-unq outdated-all / unq all: 241 506 / 248 520
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-23]

2023-09-23T08:19:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6282606909 # 800
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: last 14d: unq all: 1 12
* notice: prev accum: outdated-unq outdated-all / unq all: 241 506 / 247 518
* notice: next accum: outdated-unq outdated-all / unq all: 241 506 / 248 519
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-09 2023-09-23]

2023-09-23T01:13:33Z: