@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-24T01:19:39Z",
+  "timestamp" : "2023-09-24T08:19:37Z",
   "count_outdated" : 508,
   "uniques_outdated" : 242,
-  "count" : 520,
-  "uniques" : 248,
+  "count" : 521,
+  "uniques" : 249,
   "clones" : [
     {
       "timestamp": "2023-09-17T00:00:00Z",
@@ -55,6 +55,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
