@@ -1,3 +1,12 @@
+2023-09-24T08:19:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6288957557 # 803
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
+* notice: last 14d: unq all: 1 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 242 508 / 248 520
+* notice: next accum: outdated-unq outdated-all / unq all: 242 508 / 249 521
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-24]
+
 2023-09-24T01:19:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6287155283 # 802
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
